# Breach-Checker

./: README.md  massp.txt  passleaks.json  pyproject.toml  requirements.txt
bchecker/: __main__.py  api.py  http_client.py  utils.py
